fix: Modal sitting behind backdrop

--- a/static/style.css
+++ b/static/style.css
@@ -87,6 +87,10 @@ a {
   opacity: 1;
 }
 
+.modal-backdrop {
+  z-index: -1;
+}
+
 .sidebar-show-btn {
   display: none;
   position: fixed;
